docs(thesis): finish PhD thesis — appendices, data tables, abstract fix
Four targeted completions:

1. Abstract: corrected capacity figure 400K → 690K actors/GB (formula:
   heapBytes / 1,454 gives 690K/GB, not 400K). The prior figure had no
   basis in the measured data.

2. Section 5.7 expanded: added RequestReply latency cliff table with all
   4 concurrency data points (10/100/1K/10K), pattern-level OOM threshold
   table (DeadLetter 500K, RoutingSlip 300K, CompetingConsumers fairness
   variance), and root cause analysis for each.

3. Appendix A: annotated Agent.java and VirtualThreadRuntime spawn()/stop()
   listings with case labels matching the Chapter 7 JMM proof. Source is
   the verbatim post-fix code at commit bcd3bc93.

4. Appendix B: experiment harness Exp 1 listing with reproducibility
   command. Appendix C: JMH configuration and benchmark class registry.
   Appendix D: six complete raw data tables (all 47 measurement rows
   from ACTOR_PATTERNS_BREAKING_POINTS.md) including stop-race probe.

Final thesis: 1,055 lines (~11,500 words). All claims now backed by data
in appendices. Abstract and body are internally consistent.

https://claude.ai/code/session_01Ssy7PUMv3hMvMKLA9Kxsgt